[package]
name = "caulk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly = "0.3"
ark-bls12-381 = "0.3"
ark-ec = "0.3"
ark-ff = "0.3"
ark-serialize = "0.3"
ark-poly-commit = "0.3"
ark-std = "0.3"
rand = "0.8"
merlin = "3.0.0"